--- a/second.yml
+++ b/second.yml
@@ -8,7 +8,8 @@
     - name: Provision a set of instances
       ec2:
          key_name: work
-	 group: test
+region: us-east-1
+         group: test
          instance_type: t2.micro
          image:  ami-035b3c7efe6d061d5
          wait: true
