--- a/second.yml
+++ b/second.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: localhost
+- hosts: ec2
   gather_facts: False
   
 
@@ -9,9 +9,9 @@
       ec2:
          key_name: work
          region: us-east-1
-         
+         group: test
          instance_type: t2.micro
-         image:  ami-035b3c7efe6d061d5
+         image:  ami-0b898040803850657
          wait: true
          exact_count: 5
          count_tag:
