--- a/second.yml
+++ b/second.yml
@@ -11,6 +11,7 @@
          region: us-east-1
          group: test
          instance_type: t2.micro
+         state: running
          image:  ami-0b898040803850657
          wait: true
          exact_count: 5
