--- a/second.yml
+++ b/second.yml
@@ -7,7 +7,7 @@
 
     - name: Provision a set of instances
       ec2:
-         key_name: "{{work}}"
+         key_name: "{{key_name}}"
          region: us-east-1
          group: test
          instance_type: t2.micro
