--- a/second.yml
+++ b/second.yml
@@ -7,16 +7,11 @@
 
     - name: Provision a set of instances
       ec2:
-         key_name: "{{keyname}}"
-         region: us-east-1
-         group: test
+         key_name: "{{key_name}}"
          instance_type: t2.micro
-         state: running
-         image:  ami-0b898040803850657
-         wait: true
-         exact_count: 5
-         count_tag:
-            Name: Demo
-         instance_tags:
-            Name: Demo
-      register: ec2
+         image: ami-0b898040803850657
+         wait: yes
+         group: webserver
+         count: 1
+         vpc_subnet_id: "{{subnet}}"
+         assign_public_ip: yes
