--- a/second.yml
+++ b/second.yml
@@ -8,6 +8,7 @@
     - name: Provision a set of instances
       ec2:
          key_name: "{{key_name}}"
+         region: us-east-1
          instance_type: t2.micro
          image: ami-0b898040803850657
          wait: yes
