--- a/second.yml
+++ b/second.yml
@@ -11,6 +11,7 @@
          region: us-east-1
          instance_type: t2.micro
          image: ami-0b898040803850657
+         state: absent
          wait: yes
          count: 1
          vpc_subnet_id: "{{subnet}}"
