--- a/second.yml
+++ b/second.yml
@@ -12,8 +12,8 @@
          instance_type: t2.micro
          image: ami-0b898040803850657
          state: absent
-         wait: yes
-         count: 1
+         
+         
          vpc_subnet_id: "{{subnet}}"
          assign_public_ip: yes
-         id: "{{instance_id}}"
+         instance_ids: "{{instance_id}}"
