--- a/third.yml
+++ b/third.yml
@@ -14,7 +14,7 @@
         state: poweredon
         guest_id: centos64Guest
         resource_pool: Div_184
-        folder: Sandbox
+        folder: vCloud-East/vm/Sandbox
         disk:
         - size_gb: 50
           type: thin
