--- a/third.yml
+++ b/third.yml
@@ -11,7 +11,7 @@
         datacenter: vCloud-East
         cluster: vCloud
         name: tower-test-01
-        state: poweredon
+        state: shutdownguest
         guest_id: centos64Guest
         resource_pool: Div_184
         folder: vCloud-East/vm/Sandbox
