--- a/fourth.yml
+++ b/fourth.yml
@@ -5,5 +5,6 @@
       vmware_guest_facts:
         datacenter: vCloud-East
        	validate_certs: no
-        name: vCloud-East/vm/Sandbox
+        folder: vCloud-East/vm/Sandbox
+        name: "{{name}}"
       debug: facts
